[gd_scene load_steps=5 format=3 uid="uid://dcow7k7gcwxjy"]

[ext_resource type="Script" path="res://UI/buff_tooltip.gd" id="1_a48da"]
[ext_resource type="FontFile" uid="uid://dpxifyakt7st" path="res://Fonts/PressStart2P.ttf" id="1_rxjw7"]

[sub_resource type="LabelSettings" id="LabelSettings_dfito"]
font = ExtResource("1_rxjw7")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_q7kpa"]
font = ExtResource("1_rxjw7")
font_size = 9

[node name="BuffTooltip" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
mouse_filter = 2
script = ExtResource("1_a48da")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -162.0
offset_top = 10.0
offset_right = -3.0
offset_bottom = 60.0
grow_horizontal = 0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -2.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="BuffName" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "BUFF NAME"
label_settings = SubResource("LabelSettings_dfito")

[node name="BuffLevel" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_dfito")

[node name="BuffDescription" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "BUFF DESCRIPTION BUFF DESCRIPTION BUFF DESCRIPTION"
label_settings = SubResource("LabelSettings_q7kpa")
autowrap_mode = 2
